--- a/backend/pizzaria/src/main/resources/application.properties
+++ b/backend/pizzaria/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=pizzaria
+spring.datasource.url=jdbc:mysql://localhost:3306/pizzaria
+spring.datasource.username=root
+spring.datasource.password=root
+spring.sql.init.schema-locations=pizzaria
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
